--- a/about-us.html
+++ b/about-us.html
@@ -18,135 +18,138 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.y12417e4ab831d4ba18a1ed8ac256b0a5 p,.y12417e4ab831d4ba18a1ed8ac256b0a5 a,.y12417e4ab831d4ba18a1ed8ac256b0a5 span,.y12417e4ab831d4ba18a1ed8ac256b0a5 label{
-font-size:16px!important;
-}
-.btn-md{
-padding: 14.7px 29.8px;
-border-radius: 0;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.y6be26a4f3f2eb73266b184953119ee92:hover{
-box-shadow: 0 50.5px 50.2px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.acabb68a0a85aa7099ef0fd1a4443ede5 a{
-font-size:16px;
-}
 footer *{
 font-size:16px !important;
-}
-a{
-text-decoration: none!important;
 }
 ul{
 list-style: circle;
 }
-.nav-item{
-padding-left:8.3px;
-padding-right:7.6px;
-padding-top:5.3px;
-padding-bottom:4.5px;
+.v9791dd321cc813c86c581b5db8385db0 a,.c2005bea7b6cf3e2d669d8395ce4ceee7 a{
+color:#090909!important;
+text-decoration: underline !important;
+}
+footer{
+background:#050505;
+color:#ffffff;
+}
+.y4766cf34899e521e47eaa899b548a988:hover{
+box-shadow: 0 49.5px 50.2px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.a8ac5d06525cecf8fa8a602a0582ba43c{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+html{
+scroll-behavior: smooth;
+}
+.nav-link{
+color: #000000;
+
+}
+a:hover{
+color:;background:!important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.y12417e4ab831d4ba18a1ed8ac256b0a5 a,.acabb68a0a85aa7099ef0fd1a4443ede5 a{
-color:#080808!important;
-text-decoration: underline !important;
-}
-.c1a63ca07e5ee0d7247078f1a35a9f842{
-border: 1px solid #73909e41;
-border-radius: 5px;
-padding: 20px 20px;
-background: #edebe7;
-}
-.navbar a{
-font-size: 18.3px!important;
-font-weight: bold;
-}
-.nav-link{
-color: #000000!important;
-
-}
-.acabb68a0a85aa7099ef0fd1a4443ede5 p,.acabb68a0a85aa7099ef0fd1a4443ede5 span,.acabb68a0a85aa7099ef0fd1a4443ede5 label{
+.c2005bea7b6cf3e2d669d8395ce4ceee7 p,.c2005bea7b6cf3e2d669d8395ce4ceee7 span,.c2005bea7b6cf3e2d669d8395ce4ceee7 label{
 font-size:16px!important;
 }
-html{
-scroll-behavior: smooth;
+a{
+text-decoration: none!important;
 }
-.x446a70e34f157076407f4e56ad054bd7{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
+.btn-md{
+padding: 14.8px 30.1px;
+border-radius: 0;
 }
-footer{
-background:#000000;
-color:#ffffff;
+.nav-item{
+padding-left:7.6px;
+padding-right:8px;
+padding-top:5px;
+padding-bottom:5.1px;
+}
+.v9791dd321cc813c86c581b5db8385db0 p,.v9791dd321cc813c86c581b5db8385db0 a,.v9791dd321cc813c86c581b5db8385db0 span,.v9791dd321cc813c86c581b5db8385db0 label{
+font-size:16px!important;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.w197c2b653b716edaed1a46c3d24d17f6{
+border: 1px solid #65829033;
+border-radius: 5px;
+padding: 20px 20px;
+background: #fbf9f5;
+}
+.c2005bea7b6cf3e2d669d8395ce4ceee7 a{
+font-size:16px;
+}
+.navbar a{
+font-size: 17.9px!important;
+font-weight: bold;
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar navbar-expand-lg">
-<a class="navbar-brand" href="https://finance.netlify.app/index.html"  ><img alt="img/logo-512--512px13.png" src="img/logo-512--512px13.png"  width="150px" ></a>
+<nav class="navbar-expand-lg navbar">
+<a class="navbar-brand" href="https://financeadviser.netlify.app/index.html"  ><img alt="img/logo-512--512px13.png" src="img/logo-512--512px13.png"  width="150px" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="ml-auto d-flex navbar-nav align-items-center"><li class="nav-item"><a class="f2527b1d20fa23373d8a322a7df10b497 nav-link" href="https://finance.netlify.app/news.html"  >News</a></li>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="ml-auto align-items-center d-flex navbar-nav"><li class="nav-item"><a class="w6c546d3a89ae89cc69628f59e0411a1e nav-link" href="https://financeadviser.netlify.app/news.html"  >News</a></li>
   
 <li class=" nav-item dropdown">
-<a class="f2527b1d20fa23373d8a322a7df10b497 dropdown-toggle nav-link" href="https://finance.netlify.app/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Prestige Portfolio Partners Types of Insurance Web Space</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://finance.netlify.app/index.html"  >Prestige Portfolio Partners Types of Insurance Web Space</a>
-<a class="dropdown-item" href="https://finance.netlify.app/health-insurance.html"  >Health Insurance</a>
-<a class="dropdown-item" href="https://finance.netlify.app/auto-insurance.html"  >Auto Insurance</a>
-<a class="dropdown-item" href="https://finance.netlify.app/home-insurance.html"  >Home Insurance</a>
-<a class="dropdown-item" href="https://finance.netlify.app/life-insurance.html"  >Life Insurance</a>
-<a class="dropdown-item" href="https://finance.netlify.app/travel-insurance.html"  >Travel Insurance</a>
-  
-<li class="dropdown  nav-item">
-<a class="dropdown-toggle nav-link f2527b1d20fa23373d8a322a7df10b497" href="https://finance.netlify.app/insurance-providers.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Insurance Providers</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://finance.netlify.app/insurance-providers.html"  >Insurance Providers</a>
-<a class="dropdown-item" href="https://finance.netlify.app/state-farm.html"  >State Farm</a>
-<a class="dropdown-item" href="https://finance.netlify.app/allstate.html"  >Allstate</a>
-<a class="dropdown-item" href="https://finance.netlify.app/geico.html"  >Geico</a>
-<a class="dropdown-item" href="https://finance.netlify.app/progressive.html"  >Progressive</a>
-<a class="dropdown-item" href="https://finance.netlify.app/nationwide.html"  >Nationwide</a>
-  
-<li class=" nav-item dropdown">
-<a class="nav-link dropdown-toggle f2527b1d20fa23373d8a322a7df10b497" href="https://finance.netlify.app/insurance-claims-process.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Insurance Claims Process</a>
+<a class="nav-link dropdown-toggle w6c546d3a89ae89cc69628f59e0411a1e" href="https://financeadviser.netlify.app/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Prestige Portfolio Partners Types of Insurance Web Space</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://finance.netlify.app/insurance-claims-process.html"  >Insurance Claims Process</a>
-<a class="dropdown-item" href="https://finance.netlify.app/filing-a-claim.html"  >Filing a Claim</a>
-<a class="dropdown-item" href="https://finance.netlify.app/claims-investigation.html"  >Claims Investigation</a>
-<a class="dropdown-item" href="https://finance.netlify.app/claim-settlement.html"  >Claim Settlement</a>
-<a class="dropdown-item" href="https://finance.netlify.app/disputes-and-appeals.html"  >Disputes and Appeals</a>
-<a class="dropdown-item" href="https://finance.netlify.app/subrogation.html"  >Subrogation</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/index.html"  >Prestige Portfolio Partners Types of Insurance Web Space</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/health-insurance.html"  >Health Insurance</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/auto-insurance.html"  >Auto Insurance</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/home-insurance.html"  >Home Insurance</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/life-insurance.html"  >Life Insurance</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/travel-insurance.html"  >Travel Insurance</a>
   
 <li class="nav-item dropdown ">
-<a class="nav-link f2527b1d20fa23373d8a322a7df10b497 dropdown-toggle" href="https://finance.netlify.app/insurance-premiums-and-deductibles.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Insurance Premiums and Deductibles</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://finance.netlify.app/insurance-premiums-and-deductibles.html"  >Insurance Premiums and Deductibles</a>
-<a class="dropdown-item" href="https://finance.netlify.app/calculating-premiums.html"  >Calculating Premiums</a>
-<a class="dropdown-item" href="https://finance.netlify.app/factors-affecting-premiums.html"  >Factors Affecting Premiums</a>
-<a class="dropdown-item" href="https://finance.netlify.app/paying-deductibles.html"  >Paying Deductibles</a>
-<a class="dropdown-item" href="https://finance.netlify.app/high-vs-low-deductibles.html"  >High vs Low Deductibles</a>
+<a class="w6c546d3a89ae89cc69628f59e0411a1e dropdown-toggle nav-link" href="https://financeadviser.netlify.app/insurance-providers.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Insurance Providers</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="https://financeadviser.netlify.app/insurance-providers.html"  >Insurance Providers</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/state-farm.html"  >State Farm</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/allstate.html"  >Allstate</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/geico.html"  >Geico</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/progressive.html"  >Progressive</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/nationwide.html"  >Nationwide</a>
   
-<li class="nav-item  dropdown">
-<a class="dropdown-toggle nav-link f2527b1d20fa23373d8a322a7df10b497" href="https://finance.netlify.app/must-read.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Must Read</a>
+<li class="dropdown  nav-item">
+<a class="dropdown-toggle w6c546d3a89ae89cc69628f59e0411a1e nav-link" href="https://financeadviser.netlify.app/insurance-claims-process.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Insurance Claims Process</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="https://finance.netlify.app/must-read.html"  >Must Read</a>
-<a class="dropdown-item" href="https://finance.netlify.app/importance-of-insurance.html"  >Importance of Insurance</a>
-<a class="dropdown-item" href="https://finance.netlify.app/financial-protection.html"  >Financial Protection</a>
-<a class="dropdown-item" href="https://finance.netlify.app/risk-management.html"  >Risk Management</a>
-<a class="dropdown-item" href="https://finance.netlify.app/legal-requirements.html"  >Legal Requirements</a>
-<a class="dropdown-item" href="https://finance.netlify.app/peace-of-mind.html"  >Peace of Mind</a>
-<a class="dropdown-item" href="https://finance.netlify.app/longterm-planning.html"  >Longterm Planning</a>
-<li class="nav-item"><a class="f2527b1d20fa23373d8a322a7df10b497 nav-link" rel=nofollow href="https://finance.netlify.app/about-us.html">About Us</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/insurance-claims-process.html"  >Insurance Claims Process</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/filing-a-claim.html"  >Filing a Claim</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/claims-investigation.html"  >Claims Investigation</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/claim-settlement.html"  >Claim Settlement</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/disputes-and-appeals.html"  >Disputes and Appeals</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/subrogation.html"  >Subrogation</a>
+  
+<li class=" nav-item dropdown">
+<a class="w6c546d3a89ae89cc69628f59e0411a1e nav-link dropdown-toggle" href="https://financeadviser.netlify.app/insurance-premiums-and-deductibles.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Insurance Premiums and Deductibles</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="https://financeadviser.netlify.app/insurance-premiums-and-deductibles.html"  >Insurance Premiums and Deductibles</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/calculating-premiums.html"  >Calculating Premiums</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/factors-affecting-premiums.html"  >Factors Affecting Premiums</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/paying-deductibles.html"  >Paying Deductibles</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/high-vs-low-deductibles.html"  >High vs Low Deductibles</a>
+  
+<li class="dropdown  nav-item">
+<a class="w6c546d3a89ae89cc69628f59e0411a1e nav-link dropdown-toggle" href="https://financeadviser.netlify.app/must-read.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Must Read</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="https://financeadviser.netlify.app/must-read.html"  >Must Read</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/importance-of-insurance.html"  >Importance of Insurance</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/financial-protection.html"  >Financial Protection</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/risk-management.html"  >Risk Management</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/legal-requirements.html"  >Legal Requirements</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/peace-of-mind.html"  >Peace of Mind</a>
+<a class="dropdown-item" href="https://financeadviser.netlify.app/longterm-planning.html"  >Longterm Planning</a>
+<li class="nav-item"><a class="w6c546d3a89ae89cc69628f59e0411a1e nav-link" rel=nofollow href="https://financeadviser.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -159,7 +162,7 @@ color:#ffffff;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 c1a63ca07e5ee0d7247078f1a35a9f842">
+<div class="col-md-12 mb-3 w197c2b653b716edaed1a46c3d24d17f6">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>Prestige Portfolio Partners</h4></a>
@@ -172,10 +175,10 @@ color:#ffffff;
 <div class="col-lg-4">                 
 <div>
 <h1 class="pb-4">Contact Us</h1>
-<p>Email : <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="11427e6179787047787374292151797e657c70787d3f727e7c">[email&#160;protected]</a></p>
-<p>Phone : 788-464-0772</p>
-<p>Address : 0765 Main Street</p>
-<p>, Fremont, CA, 94536, USA.</p>
+<p>Email : LoganFloresJoy@gmail.com</p>
+<p>Phone : 119-001-6065</p>
+<p>Address : 3103  River Road</p>
+<p>, Hialeah, FL, 33010, United States.</p>
 </div>
 </div>
 <div class="col-lg-8">
@@ -183,10 +186,10 @@ color:#ffffff;
 </div>
 </div>
 <footer>
-<div class="container pt-5 py-4" >
-<div class="row"><div class="col-lg-3"><p><a class="f2527b1d20fa23373d8a322a7df10b497" href="https://finance.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="f2527b1d20fa23373d8a322a7df10b497" href="https://finance.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="f2527b1d20fa23373d8a322a7df10b497" href="https://finance.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<div class="pt-5 py-4 container" >
+<div class="row"><div class="col-lg-3"><p><a class="w6c546d3a89ae89cc69628f59e0411a1e" href="https://financeadviser.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="w6c546d3a89ae89cc69628f59e0411a1e" href="https://financeadviser.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="w6c546d3a89ae89cc69628f59e0411a1e" href="https://financeadviser.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><p>The information provided on this blog is for general informational purposes only and is not intended as financial or investment advice. All content on this site is presented as general information and should not be taken as specific advice tailored to any individual&rsquo;s specific financial situation.</p>
 
 <p>Before making any financial decisions, you are advised to consult with a qualified professional, such as a financial advisor or planner, to discuss your specific financial situation and objectives. The authors and contributors of this blog make no representations as to the accuracy, completeness, relevance, suitability, or validity of any information on this site and will not be liable for any errors, omissions, or delays in this information or any losses, injuries, or damages arising from its display or use.</p></p>
@@ -194,7 +197,7 @@ color:#ffffff;
 </div></div>
 </div>
 </footer> 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">
+<script type="text/javascript">
 document.addEventListener('DOMContentLoaded', function() {
 var dropdowns = document.querySelectorAll('.dropdown-hover');
 function showDropdown() {
